kubernetes/apps/default/kiro-gateway/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kiro-gateway
spec:
  type: ExternalName
  externalName: mac.internal
  ports:
    - port: 8000
      targetPort: 8000
